Enable to display initial photo

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
   </head>
 
   <body>
-    <div ng-controller="MapsCtrl">
-      {{photos | json}}
-    </div>
-    <div ng-controller="BtnCtrl">
+    <div ng-controller="ViewCtrl">
+      <div class="display" id="front">
+        <img src={{photo.path}} />
+      </div>
       <button class="btn" ng-click="forward()">Forward</button>
       <button class="btn" ng-click="back()">Back</button>
       <button class="btn" ng-click="left()">Left</button>
