--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript" ></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript"></script>
     <script src="assets/application.js"></script>
+    <script src="assets/application.css"></script>
   </head>
 
   <body>
@@ -21,10 +22,10 @@
       <button class="btn" ng-show="hasPhoto.left" ng-click="left()">Left</button>
       <button class="btn" ng-show="hasPhoto.right" ng-click="right()">Right</button>
 
-      <img ng-show="flags.forward" src="images/triangle.png" style="transform: rotate(0deg);"/>
-      <img ng-show="flags.back" src="images/triangle.png" style="transform: rotate(180deg);"/>
-      <img ng-show="flags.left" src="images/triangle.png" style="transform: rotate(270deg);"/>
-      <img ng-show="flags.right" src="images/triangle.png" style="transform: rotate(90deg);"/>
+      <img class="arrow" ng-show="flags.forward" src="images/triangle.png" style="transform: rotate(0deg);"/>
+      <img class="arrow" ng-show="flags.back" src="images/triangle.png" style="transform: rotate(180deg);"/>
+      <img class="arrow" ng-show="flags.left" src="images/triangle.png" style="transform: rotate(270deg);"/>
+      <img class="arrow" ng-show="flags.right" src="images/triangle.png" style="transform: rotate(90deg);"/>
     </div>
   </body>
 </html>
