--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,27 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript" ></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript"></script>
     <script src="assets/application.js"></script>
-    <script src="assets/application.css"></script>
+    <link href="assets/application.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
     <div ng-controller="ViewCtrl">
       <div class="display" id="front">
-        <img src={{photo.path}} />
+        <img class="photo" src={{photo.path}} />
       </div>
-      <button class="btn" ng-show="hasPhoto.forward" ng-click="forward()">Forward</button>
-      <button class="btn" ng-show="hasPhoto.back" ng-click="back()">Back</button>
-      <button class="btn" ng-show="hasPhoto.left" ng-click="left()">Left</button>
-      <button class="btn" ng-show="hasPhoto.right" ng-click="right()">Right</button>
-
-      <img class="arrow" ng-show="flags.forward" src="images/triangle.png" style="transform: rotate(0deg);"/>
-      <img class="arrow" ng-show="flags.back" src="images/triangle.png" style="transform: rotate(180deg);"/>
-      <img class="arrow" ng-show="flags.left" src="images/triangle.png" style="transform: rotate(270deg);"/>
-      <img class="arrow" ng-show="flags.right" src="images/triangle.png" style="transform: rotate(90deg);"/>
+      <button class="btn" ng-click="turnLeft()">Turn left</button>
+      <button class="btn" ng-click="turnRight()">Turn right</button>
+      <br />
+      <button class="btn" ng-show="hasPhoto.forward" ng-click="goForward()">Forward</button>
+      <button class="btn" ng-show="hasPhoto.back" ng-click="goBack()">Back</button>
+      <button class="btn" ng-show="hasPhoto.left" ng-click="goLeft()">Left</button>
+      <button class="btn" ng-show="hasPhoto.right" ng-click="goRight()">Right</button>
+      <br />
+      <img class="arrow" src="images/triangle.png" style="transform: rotate({{theta}}deg);"/>
+      <ul>
+        <li>x: {{col.x}}</li>
+        <li>y: {{col.y}}</li>
+        <li>z: {{col.z}}</li>
     </div>
   </body>
 </html>
